<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/send_hello"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/dime_8dp"
            android:layout_weight="1"
            android:text="@string/send_hello"
            android:textAllCaps="false"
            android:textSize="@dimen/dime_22sp" />

        <Button
            android:id="@+id/send_bye"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/dime_8dp"
            android:layout_weight="1"
            android:text="@string/send_bye"
            android:textAllCaps="false"
            android:textSize="@dimen/dime_22sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dime_22sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dime_8dp"
            android:hint="@string/message"
            android:inputType="text"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/send_message"
        android:textAllCaps="false" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/subscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dime_8dp"
            android:hint="@string/subscribe"
            android:inputType="text"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/subscribe_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/subscribe"
        android:textAllCaps="false" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/unsubscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dime_8dp"
            android:hint="@string/unsubscribe"
            android:inputType="text"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/unsubscribe_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/unsubscribe"
        android:textAllCaps="false" />
</LinearLayout>